v3.5.0 b629
* new feature: utilizing the plugin LM_Items you can now utilize 3rd party custom items directly in custom drops